java 21 progress
lots of various cleanup, optimizations, and fixes

distance check

stop manual unboxing

deprecate